# sqlite-web-viewer

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: build.yml
android_lib/: PUBLISHING.md  build.gradle.kts  settings.gradle.kts
android_lib/demoapp/: build.gradle.kts
android_lib/gradle/: libs.versions.toml
android_lib/gradle/wrapper/: gradle-wrapper.properties
flutter_app/: .gitignore  pubspec.yaml
flutter_app/lib/: cell_value.dart  console.dart  console_view.dart  drag_handle.dart  highlighter.dart  main.dart  nav_item.dart  pagination_bar.dart  query.dart  record_browser.dart  record_header_bar.dart  record_query_info.dart  record_table.dart  section_nav.dart  shared_prefs.dart  sql_query_edit.dart  sql_viewer.dart  table_schema_view.dart  table_view.dart  text_span_ext.dart  value_display.dart
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
src/: lib.rs  r2d2_adapter.rs
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webapp/.github/: copilot-instructions.md
webapp/app/: layout.tsx  page.tsx
webapp/components/: table_list.tsx  table_view.tsx
webapp/lib/: useSqlQuery.ts
webapp/src/: App.css  App.tsx  RecordQueryable.tsx  api.ts  dbVersion.ts
webapp/src/components/: ColumnHeader.tsx  DarkModeSwitch.tsx  DataViewerPanel.css  DataViewerPanel.tsx  FilterBar.css  FilterBar.tsx  IndexView.tsx  IndicesView.tsx  LazyPage.tsx  MainPanel.tsx  NavListPanel.css  NavListPanel.tsx  PaginationBar.css  (+16 more)
webapp3/: package.json  vite.config.ts
webapp3/src/: App.tsx  main.tsx
(+14 files in other folders)
