[package]
name = "sqlite-web-viewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0"
dotenvy = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tracing = { version = "0.1.41", features = ["async-await", "attributes"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
rusqlite = { version = "0", default-features = false }
r2d2 = "0"
r2d2_sqlite = "0"
tower-http = { version = "0", features = ["cors"] }
infer = "0.19.0"
base64 = "0.22.1"
